--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "strict": true,
     "noEmit": true,
     "target": "es6",
     "allowJs": true,
-    "rootDir": "src/server",
     "sourceMap": true,
     "module": "esnext",
     "noImplicitAny": true,
     "noUnusedLocals": true,
+    "rootDir": "src/server",
     "esModuleInterop": true,
     "strictNullChecks": true,
     "moduleResolution": "node",
     "noUnusedParameters": true,
+    "jsxFactory": "createElement",
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
