--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/eslint": "^6.8.1",
     "@types/express": "^4.17.6",
+    "@types/graphql-type-json": "^0.3.2",
     "@types/helmet": "0.0.47",
     "@types/lodash": "^4.14.155",
     "@types/morgan": "^1.9.0",
