--- a/package.json
+++ b/package.json
@@ -53,9 +53,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "graphql": "^15.0.0",
     "graphql-fields": "^2.0.3",
-    "graphql-import": "^1.0.2",
     "graphql-tag": "^2.10.3",
     "graphql-type-json": "^0.3.1",
     "graphql-upload": "^11.0.0",
@@ -94,7 +92,9 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/sharp": "^0.25.0",
+    "@types/uuid": "^8.0.0",
     "@types/webpack": "^4.41.17",
+    "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "compression-webpack-plugin": "^4.0.0",
@@ -105,11 +105,12 @@
     "dotenv-webpack": "^1.8.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-typescript": "^8.0.2",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "graphql": "^15.1.0",
     "html-webpack-plugin": "^4.3.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
