--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,7 +2,7 @@
 	"plugins": ["stylelint-scss"],
 	"extends": "stylelint-config-sass-guidelines",
 	"rules": {
-		"indentation": null,
+		"indentation": "tab",
 		"selector-max-id": 1,
 		"string-quotes": "double",
 		"max-nesting-depth": null,
