--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,10 +13,10 @@
 		"plugin:node/recommended"
 	],
 	"plugins": [
-		"@typescript-eslint",
-		"promise",
+		"node",
 		"import",
-		"node"
+		"promise",
+		"@typescript-eslint"
 	],
 	"ignorePatterns": [
 		"node_modules",
@@ -52,11 +52,13 @@
 		"lines-between-class-members": "off",
 		"import/prefer-default-export": "off",
 		"react/jsx-filename-extension": "off",
+		"@typescript-eslint/comma-spacing": "off",
 		"@typescript-eslint/ban-ts-comment": "off",
 		"jsx-a11y/click-events-have-key-events": "off",
 		"jsx-a11y/label-has-associated-control": "off",
 		"jsx-a11y/control-has-associated-label": "off",
 		"jsx-a11y/no-static-element-interactions": "off",
+		"@typescript-eslint/no-non-null-assertion": "off",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"import/extensions": [
 			"error",
