--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,10 @@
 		"jsx-a11y/no-static-element-interactions": "off",
 		"@typescript-eslint/no-non-null-assertion": "off",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
+		"no-mixed-spaces-and-tabs": [
+			"error",
+			"smart-tabs"
+		],
 		"import/extensions": [
 			"error",
 			"never"
