--- a/package.json
+++ b/package.json
@@ -45,21 +45,21 @@
 	"homepage": "https://github.com/olyop/music-app/blob/master/README.md",
 	"dependencies": {
 		"@apollo/react-hooks": "^3.1.5",
-		"@material-ui/core": "^4.10.1",
+		"@material-ui/core": "^4.10.2",
 		"apollo-cache-inmemory": "^1.6.6",
 		"apollo-client": "^2.6.10",
-		"apollo-server-express": "^2.14.3",
+		"apollo-server-express": "^2.14.4",
 		"apollo-upload-client": "^13.0.0",
-		"aws-sdk": "^2.694.0",
+		"aws-sdk": "^2.696.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"graphql-scalars": "^1.1.5",
 		"graphql-tag": "^2.10.3",
-		"graphql-type-json": "^0.3.2",
 		"graphql-upload": "^11.0.0",
-		"helmet": "^3.22.1",
+		"helmet": "^3.23.0",
 		"lodash": "^4.17.15",
 		"morgan": "^1.10.0",
 		"music-metadata": "^6.4.0",
@@ -68,7 +68,7 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
-		"sharp": "^0.25.2",
+		"sharp": "^0.25.4",
 		"uuid": "^8.1.0"
 	},
 	"devDependencies": {
@@ -78,12 +78,11 @@
 		"@types/compression": "^1.7.0",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
-		"@types/eslint": "^6.8.1",
+		"@types/eslint": "^7.2.0",
 		"@types/express": "^4.17.6",
-		"@types/graphql-type-json": "^0.3.2",
 		"@types/helmet": "0.0.47",
 		"@types/lodash": "^4.14.155",
-		"@types/morgan": "^1.9.0",
+		"@types/morgan": "^1.9.1",
 		"@types/node": "^14.0.13",
 		"@types/node-fetch": "^2.5.7",
 		"@types/node-sass": "^4.11.1",
@@ -100,7 +99,7 @@
 		"compression-webpack-plugin": "^4.0.0",
 		"concurrently": "^5.2.0",
 		"copy-webpack-plugin": "^6.0.2",
-		"css-loader": "^3.5.3",
+		"css-loader": "^3.6.0",
 		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^1.8.0",
 		"eslint": "^7.2.0",
@@ -126,7 +125,7 @@
 		"stylelint-config-sass-guidelines": "^7.0.0",
 		"stylelint-scss": "^3.17.2",
 		"stylelint-webpack-plugin": "^2.0.0",
-		"terser-webpack-plugin": "^3.0.3",
+		"terser-webpack-plugin": "^3.0.4",
 		"ts-loader": "^7.0.5",
 		"ts-node": "^8.10.2",
 		"typescript": "^3.9.5",
