--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,15 +9,19 @@
 	"scss.validate": false,
 	"editor.lineHeight": 24,
 	"git.confirmSync": false,
+  "editor.folding": false,
 	"editor.fontWeight": "600",
 	"workbench.tree.indent": 20,
 	"editor.lineNumbers": "off",
 	"editor.insertSpaces": false,
 	"breadcrumbs.enabled": false,
+  "editor.glyphMargin": false,
 	"editor.formatOnPaste": false,
 	"git.enableSmartCommit": true,
+  "editor.fontLigatures": false,
 	"explorer.confirmDelete": false,
 	"editor.minimap.enabled": false,
+  "eslint.alwaysShowStatus": true,
 	"files.insertFinalNewline": false,
 	"typescript.format.enable": false,
 	"editor.renderWhitespace": "none",
@@ -27,12 +31,12 @@
 	"editor.renderIndentGuides": false,
 	"editor.wrappingStrategy": "simple",
 	"explorer.confirmDragAndDrop": false,
-	"scss.colorDecorators.enable": false,
 	"workbench.colorTheme": "GitHub Plus",
 	"workbench.activityBar.visible": false,
 	"terminal.integrated.fontWeight": "600",
 	"editor.renderControlCharacters": false,
 	"terminal.integrated.rendererType": "dom",
+  "extensions.ignoreRecommendations": true,
 	"typescript.tsdk": "./node_modules\\typescript\\lib",
 	"javascript.updateImportsOnFileMove.enabled": "never",
 	"editor.fontFamily": "Liberation Mono, Consolas, 'Courier New', monospace",
@@ -44,7 +48,7 @@
 		"typescriptreact"
 	],
 	"files.exclude": {
-		".vscode/": true,
+		// ".vscode/": true,
 		"node_modules/": true,
 		".env": true
 	}
