--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,11 @@
 {
 	"plugins": ["stylelint-scss"],
 	"extends": "stylelint-config-sass-guidelines",
+	"ignoreFiles": [
+		"**/*.ts",
+		"**/*.tsx",
+		"**/*.cjs"
+	],
 	"rules": {
 		"indentation": "tab",
 		"selector-max-id": 1,
