--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
 	"version": "1.0.0",
 	"description": "music-app",
 	"deprecated": false,
-	"main": "src/server/index.js",
+	"type": "module",
 	"scripts": {
-		"server": "node -r dotenv/config",
-		"delete-build": "rm -r -f src/server/build",
+		"dev-server": "npx tsc --watch --outDir dist --rootDir src/server",
+		"dev-client": "npx webpack --config webpack.client.config.ts --env.isDev",
 		"sync": "git checkout . && git remote update && git pull",
-		"dev-server": "node_modules/.bin/nodemon --trace-warnings -r dotenv/config",
-		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master",
-		"dev-client": "node_modules/.bin/webpack-dev-server --env.NODE_ENV=local --config webpack.config.cjs -r dotenv/config",
-		"build": "clear && npm run delete-build && \"node_modules/.bin/webpack\" --env.NODE_ENV=local --config webpack.config.cjs",
-		"dev": "clear && npm run delete-build && clear && \"node_modules/.bin/concurrently\" \"npm run dev-client\" \"npm run dev-server\""
+		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
 	},
 	"repository": {
 		"type": "git",
@@ -49,16 +45,16 @@
 		"apollo-client": "^2.6.10",
 		"apollo-server-express": "^2.15.0",
 		"apollo-upload-client": "^13.0.0",
-		"aws-sdk": "^2.699.0",
+		"aws-sdk": "^2.706.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
-		"graphql-scalars": "^1.1.5",
+		"graphql-scalars": "^1.2.1",
 		"graphql-tag": "^2.10.3",
 		"graphql-upload": "^11.0.0",
-		"helmet": "^3.23.1",
+		"helmet": "^3.23.3",
 		"lodash": "^4.17.15",
 		"morgan": "^1.10.0",
 		"music-metadata": "^6.4.0",
@@ -68,43 +64,53 @@
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
 		"sharp": "^0.25.4",
-		"uuid": "^8.1.0"
+		"uuid": "^8.2.0"
 	},
 	"devDependencies": {
 		"@playlyfe/gql": "^2.6.2",
 		"@types/apollo-upload-client": "^8.1.3",
 		"@types/body-parser": "^1.19.0",
+		"@types/clean-webpack-plugin": "^0.1.3",
 		"@types/compression": "^1.7.0",
+		"@types/compression-webpack-plugin": "^4.0.0",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
+		"@types/dotenv-webpack": "^1.8.0",
 		"@types/eslint": "^7.2.0",
 		"@types/express": "^4.17.6",
 		"@types/helmet": "0.0.47",
-		"@types/lodash": "^4.14.155",
+		"@types/lodash": "^4.14.157",
+		"@types/lodash-webpack-plugin": "^0.11.4",
+		"@types/mini-css-extract-plugin": "^0.9.1",
 		"@types/morgan": "^1.9.1",
-		"@types/node": "^14.0.13",
+		"@types/node": "^14.0.14",
 		"@types/node-fetch": "^2.5.7",
 		"@types/node-sass": "^4.11.1",
+		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.3",
-		"@types/react": "^16.9.38",
+		"@types/react": "^16.9.41",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-router-dom": "^5.1.5",
 		"@types/sharp": "^0.25.0",
+		"@types/terser-webpack-plugin": "^3.0.0",
 		"@types/uuid": "^8.0.0",
-		"@types/webpack": "^4.41.17",
+		"@types/webpack": "^4.41.18",
+		"@types/webpack-bundle-analyzer": "^3.8.0",
+		"@types/webpack-dev-server": "^3.11.0",
 		"@types/webpack-env": "^1.15.2",
-		"@typescript-eslint/eslint-plugin": "^3.3.0",
-		"@typescript-eslint/parser": "^3.3.0",
+		"@typescript-eslint/eslint-plugin": "^3.4.0",
+		"@typescript-eslint/parser": "^3.4.0",
+		"clean-webpack-plugin": "^3.0.0",
 		"compression-webpack-plugin": "^4.0.0",
 		"concurrently": "^5.2.0",
-		"copy-webpack-plugin": "^6.0.2",
 		"css-loader": "^3.6.0",
 		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^1.8.0",
-		"eslint": "^7.2.0",
+		"eslint": "^7.3.1",
 		"eslint-config-airbnb-typescript": "^8.0.2",
-		"eslint-plugin-import": "^2.21.2",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-jsx-a11y": "^6.3.1",
+		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-react": "^7.20.0",
 		"eslint-plugin-react-hooks": "^4.0.4",
@@ -121,16 +127,15 @@
 		"style-loader": "^1.2.1",
 		"stylelint": "^13.6.1",
 		"stylelint-config-sass-guidelines": "^7.0.0",
-		"stylelint-scss": "^3.17.2",
+		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.0",
-		"terser-webpack-plugin": "^3.0.5",
+		"terser-webpack-plugin": "^3.0.6",
 		"ts-loader": "^7.0.5",
 		"ts-node": "^8.10.2",
 		"typescript": "^3.9.5",
 		"webpack": "^4.43.0",
 		"webpack-bundle-analyzer": "^3.8.0",
-		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.11.0",
-		"write-file-webpack-plugin": "^4.5.1"
+		"webpack-cli": "^3.3.12",
+		"webpack-dev-server": "^3.11.0"
 	}
 }
