--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,25 @@
 {
 	"compilerOptions": {
+		"jsx": "react",
 		"strict": true,
-		"noEmit": true,
-		"target": "es6",
-		"allowJs": true,
 		"sourceMap": true,
+		"target": "ESNEXT",
 		"noImplicitAny": true,
 		"noUnusedLocals": true,
+		"removeComments": true,
 		"esModuleInterop": true,
 		"strictNullChecks": true,
 		"moduleResolution": "node",
 		"noUnusedParameters": true,
+		"jsxFactory": "createElement",
 		"noFallthroughCasesInSwitch": true,
 		"allowSyntheticDefaultImports": true,
 		"forceConsistentCasingInFileNames": true
 	},
 	"exclude": [
 		"node_modules"
+	],
+	"include": [
+		"src/server/**/*.ts"
 	]
 }
