--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,9 @@
   "editor.glyphMargin": false,
 	"editor.formatOnPaste": false,
 	"git.enableSmartCommit": true,
-  "editor.fontLigatures": false,
+	"editor.fontLigatures": false,
+	"javascript.showUnused": false,
+	"typescript.showUnused": false,
 	"explorer.confirmDelete": false,
 	"editor.minimap.enabled": false,
   "eslint.alwaysShowStatus": true,
@@ -30,6 +32,7 @@
 	"terminal.integrated.fontSize": 16,
 	"editor.renderIndentGuides": false,
 	"editor.wrappingStrategy": "simple",
+	"scss.colorDecorators.enable": false,
 	"explorer.confirmDragAndDrop": false,
 	"workbench.colorTheme": "GitHub Plus",
 	"workbench.activityBar.visible": false,
