--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
 	"private": true,
-	"name": "music-app",
 	"version": "1.0.0",
+	"name": "music-app",
 	"description": "music-app",
 	"deprecated": false,
 	"type": "module",
 	"scripts": {
-		"dev": "clear && npm run delete-build && clear && npx concurrently \"npm:build-server\" \"npm:build-client\" \"npm:dev-server\"",
-		"build-server": "npx tsc --watch --outDir dist --rootDir src/server",
-		"build-client": "npx webpack --watch --env.isDev",
-		"dev-server": "npx nodemon dist/index.js -r dotenv/config",
+		"dev": "clear && npm run delete-build && npm run build-server && npx concurrently \"npm:dev-server\" \"npm:dev-client\" \"npm:server-nodemon\"",
+		"dev-client": "npx webpack-dev-server --config webpack.client.config.ts --env.isDev",
+		"dev-server": "npx webpack --watch --config webpack.server.config.ts --env.isDev",
+		"server-nodemon": "npx nodemon dist/index.js -r dotenv/config",
+		"build": "npm run build-server && npm run build-client",
+		"build-client": "npx webpack --config webpack.client.config.ts",
+		"build-server": "npx webpack --config webpack.server.config.ts",
 		"delete-build": "rm -r -f dist",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
@@ -36,7 +39,7 @@
 		"email": "oliver.plummer@outlook.com"
 	},
 	"engines": {
-		"node": ">=14.0.0"
+		"node": "14.x.x"
 	},
 	"license": "MIT",
 	"bugs": "https://github.com/olyop/music-app/issues",
@@ -65,6 +68,7 @@
 		"pg": "^8.2.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-helmet": "^6.1.0",
 		"react-router-dom": "^5.2.0",
 		"sharp": "^0.25.4",
 		"uuid": "^8.2.0"
@@ -93,6 +97,7 @@
 		"@types/pg": "^7.14.3",
 		"@types/react": "^16.9.41",
 		"@types/react-dom": "^16.9.8",
+		"@types/react-helmet": "^6.0.0",
 		"@types/react-router-dom": "^5.1.5",
 		"@types/sharp": "^0.25.0",
 		"@types/terser-webpack-plugin": "^3.0.0",
@@ -101,6 +106,7 @@
 		"@types/webpack-bundle-analyzer": "^3.8.0",
 		"@types/webpack-dev-server": "^3.11.0",
 		"@types/webpack-env": "^1.15.2",
+		"@types/webpack-node-externals": "^1.7.1",
 		"@typescript-eslint/eslint-plugin": "^3.4.0",
 		"@typescript-eslint/parser": "^3.4.0",
 		"clean-webpack-plugin": "^3.0.0",
@@ -115,7 +121,7 @@
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.20.0",
+		"eslint-plugin-react": "^7.20.1",
 		"eslint-plugin-react-hooks": "^4.0.4",
 		"graphql": "^15.1.0",
 		"html-webpack-plugin": "^4.3.0",
@@ -139,6 +145,7 @@
 		"webpack": "^4.43.0",
 		"webpack-bundle-analyzer": "^3.8.0",
 		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0"
+		"webpack-dev-server": "^3.11.0",
+		"webpack-node-externals": "^1.7.2"
 	}
 }
