--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
 		"jsx": "react",
 		"strict": true,
 		"target": "ESNEXT",
-		"noImplicitAny": true,
-		"noUnusedLocals": true,
+		"module": "ESNEXT",
 		"removeComments": true,
+		"noUnusedLocals": true,
 		"esModuleInterop": true,
-		"strictNullChecks": true,
+		"isolatedModules": true,
 		"moduleResolution": "node",
 		"noUnusedParameters": true,
 		"jsxFactory": "createElement",
@@ -16,10 +16,7 @@
 		"forceConsistentCasingInFileNames": true
 	},
 	"exclude": [
-		"node_modules",
-		"webpack.config.ts"
-	],
-	"include": [
-		"src/server/**/*.ts"
+		"dist",
+		"node_modules"
 	]
 }
