--- a/package.json
+++ b/package.json
@@ -1,22 +1,13 @@
 {
 	"private": true,
+	"type": "module",
 	"version": "1.0.0",
 	"name": "music-app",
-	"description": "music-app",
 	"deprecated": false,
-	"type": "module",
-	"scripts": {
-		"dev": "clear && npm run delete-build && npm run build-server && npx concurrently \"npm:dev-server\" \"npm:dev-client\" \"npm:server-nodemon\"",
-		"dev-client": "npx webpack-dev-server --config webpack.client.config.ts --env.isDev",
-		"dev-server": "npx webpack --watch --config webpack.server.config.ts --env.isDev",
-		"server-nodemon": "npx nodemon dist/index.js -r dotenv/config",
-		"build": "npm run build-server && npm run build-client",
-		"build-client": "npx webpack --config webpack.client.config.ts",
-		"build-server": "npx webpack --config webpack.server.config.ts",
-		"delete-build": "rm -r -f dist",
-		"sync": "git checkout . && git remote update && git pull",
-		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
-	},
+	"license": "UNLICENSED",
+	"description": "music-app",
+	"bugs": "https://github.com/olyop/music-app/issues",
+	"homepage": "https://github.com/olyop/music-app/blob/master/README.md",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/olyop/music-app.git"
@@ -38,12 +29,18 @@
 		"name": "Oliver Plummer",
 		"email": "oliver.plummer@outlook.com"
 	},
-	"engines": {
-		"node": "14.x.x"
+	"scripts": {
+		"dev": "clear && npm run delete-build && npm run build-server && npx concurrently \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
+		"dev-server": "npx tsc --watch --outDir dist",
+		"dev-client": "cross-env NODE_ENV=dev npx webpack-dev-server --env.isDev",
+		"dev-nodemon": "npx nodemon dist/index.js -r dotenv/config",
+		"build": "npm run build-server && npm run build-client",
+		"build-server": "npx tsc --outDir dist",
+		"build-client": "cross-env NODE_ENV=pro npx webpack",
+		"delete-build": "rm -r -f dist",
+		"sync": "git checkout . && git remote update && git pull",
+		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
 	},
-	"license": "MIT",
-	"bugs": "https://github.com/olyop/music-app/issues",
-	"homepage": "https://github.com/olyop/music-app/blob/master/README.md",
 	"dependencies": {
 		"@apollo/react-hooks": "^3.1.5",
 		"@material-ui/core": "^4.10.2",
@@ -51,12 +48,13 @@
 		"apollo-client": "^2.6.10",
 		"apollo-server-express": "^2.15.0",
 		"apollo-upload-client": "^13.0.0",
-		"aws-sdk": "^2.706.0",
+		"aws-sdk": "^2.707.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"graphql": "^15.2.0",
 		"graphql-scalars": "^1.2.1",
 		"graphql-tag": "^2.10.3",
 		"graphql-upload": "^11.0.0",
@@ -100,18 +98,18 @@
 		"@types/react-helmet": "^6.0.0",
 		"@types/react-router-dom": "^5.1.5",
 		"@types/sharp": "^0.25.0",
-		"@types/terser-webpack-plugin": "^3.0.0",
 		"@types/uuid": "^8.0.0",
 		"@types/webpack": "^4.41.18",
 		"@types/webpack-bundle-analyzer": "^3.8.0",
 		"@types/webpack-dev-server": "^3.11.0",
 		"@types/webpack-env": "^1.15.2",
 		"@types/webpack-node-externals": "^1.7.1",
-		"@typescript-eslint/eslint-plugin": "^3.4.0",
-		"@typescript-eslint/parser": "^3.4.0",
+		"@typescript-eslint/eslint-plugin": "^3.5.0",
+		"@typescript-eslint/parser": "^3.5.0",
 		"clean-webpack-plugin": "^3.0.0",
 		"compression-webpack-plugin": "^4.0.0",
 		"concurrently": "^5.2.0",
+		"cross-env": "^7.0.2",
 		"css-loader": "^3.6.0",
 		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^1.8.0",
@@ -121,9 +119,8 @@
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.20.1",
+		"eslint-plugin-react": "^7.20.2",
 		"eslint-plugin-react-hooks": "^4.0.4",
-		"graphql": "^15.1.0",
 		"html-webpack-plugin": "^4.3.0",
 		"lodash-webpack-plugin": "^0.11.5",
 		"mini-css-extract-plugin": "^0.9.0",
@@ -138,7 +135,6 @@
 		"stylelint-config-sass-guidelines": "^7.0.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.0",
-		"terser-webpack-plugin": "^3.0.6",
 		"ts-loader": "^7.0.5",
 		"ts-node": "^8.10.2",
 		"typescript": "^3.9.5",
