--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
 	"compilerOptions": {
 		"jsx": "react",
 		"strict": true,
+		"outDir": "dist",
 		"target": "ESNEXT",
-		"module": "ESNEXT",
+		"module": "CommonJS",
 		"removeComments": true,
 		"noUnusedLocals": true,
 		"esModuleInterop": true,
-		"isolatedModules": true,
 		"moduleResolution": "node",
 		"noUnusedParameters": true,
 		"jsxFactory": "createElement",
@@ -15,8 +15,7 @@
 		"allowSyntheticDefaultImports": true,
 		"forceConsistentCasingInFileNames": true
 	},
-	"exclude": [
-		"dist",
-		"node_modules"
+	"include": [
+		"src/server"
 	]
 }
