--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,13 @@
 {
 	"extends": "./tsconfig.json",
+	"compilerOptions": {
+		"strict": true,
+		"noUnusedLocals": true,
+		"esModuleInterop": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true,
+		"allowSyntheticDefaultImports": true,
+		"forceConsistentCasingInFileNames": true
+	},
 	"include": ["src", "webpack.config.ts"]
 }
