--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"private": true,
 	"type": "module",
+	"license": "MIT",
 	"version": "1.0.0",
 	"name": "music-app",
-	"license": "UNLICENSED",
 	"description": "music-app",
 	"bugs": "https://github.com/olyop/music-app/issues",
 	"homepage": "https://github.com/olyop/music-app/blob/master/README.md",
@@ -16,7 +16,7 @@
 		"url": "https://github.com/olyop/music-app.git"
 	},
 	"engines": {
-		"node": ">=14.5.0"
+		"node": ">=14.0.0"
 	},
 	"keywords": [
 		"react",
@@ -35,7 +35,7 @@
 		"dev": "clear && npm run delete-build && npm run build-server && npx concurrently \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
 		"dev-server": "npx tsc --watch",
 		"dev-client": "cross-env NODE_ENV=dev npx webpack-dev-server --env.isDev",
-		"dev-nodemon": "npx nodemon dist/index.js -r dotenv/config",
+		"dev-nodemon": "npx nodemon -r dotenv/config",
 		"build": "npm run build-server && npm run build-client",
 		"build-server": "npx tsc",
 		"build-client": "cross-env NODE_ENV=pro npx webpack",
@@ -108,7 +108,6 @@
 		"@types/webpack-bundle-analyzer": "^3.8.0",
 		"@types/webpack-dev-server": "^3.11.0",
 		"@types/webpack-env": "^1.15.2",
-		"@types/webpack-node-externals": "^1.7.1",
 		"@typescript-eslint/eslint-plugin": "^3.5.0",
 		"@typescript-eslint/parser": "^3.5.0",
 		"clean-webpack-plugin": "^3.0.0",
@@ -145,7 +144,6 @@
 		"webpack": "^4.43.0",
 		"webpack-bundle-analyzer": "^3.8.0",
 		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0",
-		"webpack-node-externals": "^1.7.2"
+		"webpack-dev-server": "^3.11.0"
 	}
 }
