--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
 		"jsx": "react",
 		"strict": true,
 		"outDir": "dist",
-		"target": "ESNEXT",
+		"target": "ESNext",
+		"module": "CommonJS",
 		"removeComments": true,
 		"noUnusedLocals": true,
 		"esModuleInterop": true,
-		"moduleResolution": "node",
+		"moduleResolution": "Node",
 		"noUnusedParameters": true,
 		"jsxFactory": "createElement",
 		"noFallthroughCasesInSwitch": true,
