--- a/src/common/package.json
+++ b/src/common/package.json
@@ -1,7 +1,7 @@
 {
 	"type": "module",
 	"license": "MIT",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"main": "index.ts",
 	"description": "music-app-common",
 	"name": "@oly_op/music-app-common",
@@ -19,5 +19,9 @@
 	"files": [
     "types.ts",
 		"index.ts"
-	]
+	],
+	"scripts": {
+		"sync": "git checkout . && git remote update && git pull",
+		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
+	}
 }
