--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
 		"no-tabs": "off",
 		"no-console": "off",
 		"arrow-parens": "off",
+		"no-unused-vars": "off",
 		"no-else-return": "off",
 		"react/prop-types": "off",
 		"no-nested-ternary": "off",
@@ -109,6 +110,10 @@
 		"@typescript-eslint/quotes": [
 			"error",
 			"double"
+		],
+		"@typescript-eslint/no-unused-vars": [
+			"error",
+			{ "args": "none" }
 		],
 		"@typescript-eslint/naming-convention": [
 			"error",
