--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 		"@apollo/react-hooks": "^3.1.5",
 		"@material-ui/core": "^4.11.0",
 		"@oly_op/bem": "^1.0.5",
-		"@oly_op/music-app-common": "^1.0.0",
+		"@oly_op/music-app-common": "^1.1.0",
 		"@oly_op/pipe": "^1.0.4",
 		"apollo-cache-inmemory": "^1.6.6",
 		"apollo-client": "^2.6.10",
@@ -77,6 +77,12 @@
 		"uuid": "^8.2.0"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.10.4",
+		"@babel/plugin-proposal-class-properties": "^7.10.4",
+		"@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+		"@babel/preset-env": "^7.10.4",
+		"@babel/preset-react": "^7.10.4",
+		"@babel/preset-typescript": "^7.10.4",
 		"@playlyfe/gql": "^2.6.2",
 		"@types/apollo-upload-client": "^8.1.3",
 		"@types/body-parser": "^1.19.0",
@@ -110,6 +116,9 @@
 		"@types/webpack-env": "^1.15.2",
 		"@typescript-eslint/eslint-plugin": "^3.5.0",
 		"@typescript-eslint/parser": "^3.5.0",
+		"awesome-typescript-loader": "^5.2.1",
+		"babel-loader": "^8.1.0",
+		"babel-plugin-lodash": "^3.3.4",
 		"clean-webpack-plugin": "^3.0.0",
 		"compression-webpack-plugin": "^4.0.0",
 		"concurrently": "^5.2.0",
@@ -117,7 +126,7 @@
 		"css-loader": "^3.6.0",
 		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^1.8.0",
-		"eslint": "^7.3.1",
+		"eslint": "^7.4.0",
 		"eslint-config-airbnb-typescript": "^8.0.2",
 		"eslint-plugin-import": "^2.22.0",
 		"eslint-plugin-jsx-a11y": "^6.3.1",
@@ -128,17 +137,16 @@
 		"html-webpack-plugin": "^4.3.0",
 		"lodash-webpack-plugin": "^0.11.5",
 		"mini-css-extract-plugin": "^0.9.0",
-		"node-sass": "^4.14.1",
 		"nodemon": "^2.0.4",
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"prop-types": "^15.7.2",
-		"sass-loader": "^8.0.0",
+		"sass": "^1.26.9",
+		"sass-loader": "^9.0.1",
 		"style-loader": "^1.2.1",
 		"stylelint": "^13.6.1",
 		"stylelint-config-sass-guidelines": "^7.0.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.0",
-		"ts-loader": "^7.0.5",
 		"ts-node": "^8.10.2",
 		"typescript": "^3.9.6",
 		"webpack": "^4.43.0",
