--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"strict": true,
 		"outDir": "dist",
 		"target": "ESNext",
-		"module": "CommonJS",
+		"module": "ESNext",
 		"removeComments": true,
 		"noUnusedLocals": true,
 		"esModuleInterop": true,
