--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
 	"scripts": {
 		"dev": "clear && npm run delete-build && npm run build-server && npx concurrently \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
 		"dev-server": "npx tsc --watch",
-		"dev-client": "cross-env NODE_ENV=dev npx webpack-dev-server --env.isDev",
+		"dev-client": "npx cross-env NODE_ENV=dev TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --env.isDev",
 		"dev-nodemon": "npx nodemon -r dotenv/config dist/index.js",
 		"build": "npm run build-server && npm run build-client",
 		"build-server": "npx tsc",
-		"build-client": "cross-env NODE_ENV=pro npx webpack",
-		"delete-build": "rm -r -f dist",
+		"build-client": "npx cross-env NODE_ENV=pro TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack",
+		"delete-build": "rm -r -f dist && rm -r -f .awcache",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
 	},
@@ -116,7 +116,6 @@
 		"@types/webpack-env": "^1.15.2",
 		"@typescript-eslint/eslint-plugin": "^3.5.0",
 		"@typescript-eslint/parser": "^3.5.0",
-		"awesome-typescript-loader": "^5.2.1",
 		"babel-loader": "^8.1.0",
 		"babel-plugin-lodash": "^3.3.4",
 		"clean-webpack-plugin": "^3.0.0",
@@ -147,7 +146,9 @@
 		"stylelint-config-sass-guidelines": "^7.0.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.0",
+		"ts-loader": "^7.0.5",
 		"ts-node": "^8.10.2",
+		"tsconfig-paths": "^3.9.0",
 		"typescript": "^3.9.6",
 		"webpack": "^4.43.0",
 		"webpack-bundle-analyzer": "^3.8.0",
