--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,8 +1,8 @@
 {
   "presets": [
+		"@babel/env",
 		"@babel/react",
-		"@babel/typescript",
-		"@babel/env"
+		"@babel/typescript"
 	],
   "plugins": [
 		"lodash",
