--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
 	"compilerOptions": {
+		"jsx": "react",
 		"strict": true,
 		"outDir": "dist",
-		"jsx": "preserve",
 		"target": "ESNext",
 		"module": "ESNext",
+		"sourceMap": true,
 		"removeComments": true,
 		"noUnusedLocals": true,
 		"esModuleInterop": true,
@@ -12,7 +13,6 @@
 		"noUnusedParameters": true,
 		"jsxFactory": "createElement",
 		"noFallthroughCasesInSwitch": true,
-		"allowSyntheticDefaultImports": true,
 		"forceConsistentCasingInFileNames": true
 	},
 	"include": [
