--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
 	"dependencies": {
 		"@apollo/react-hooks": "^3.1.5",
 		"@material-ui/core": "^4.11.0",
-		"@oly_op/bem": "^1.0.5",
+		"@oly_op/bem": "^2.0.1",
 		"@oly_op/music-app-common": "^1.1.0",
-		"@oly_op/pipe": "^1.0.4",
+		"@oly_op/pipe": "^2.0.0",
 		"apollo-cache-inmemory": "^1.6.6",
 		"apollo-client": "^2.6.10",
 		"apollo-server-express": "^2.15.1",
@@ -59,7 +59,6 @@
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
-		"graphql": "^15.2.0",
 		"graphql-scalars": "^1.2.1",
 		"graphql-tag": "^2.10.3",
 		"graphql-upload": "^11.0.0",
@@ -101,6 +100,7 @@
 		"@types/react-helmet": "^6.0.0",
 		"@types/react-router-dom": "^5.1.5",
 		"@types/sharp": "^0.25.0",
+		"@types/terser-webpack-plugin": "^3.0.0",
 		"@types/uuid": "^8.0.0",
 		"@types/webpack": "^4.41.18",
 		"@types/webpack-bundle-analyzer": "^3.8.0",
@@ -122,6 +122,7 @@
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-react": "^7.20.3",
 		"eslint-plugin-react-hooks": "^4.0.5",
+		"graphql": "^15.3.0",
 		"html-webpack-plugin": "^4.3.0",
 		"mini-css-extract-plugin": "^0.9.0",
 		"nodemon": "^2.0.4",
@@ -134,6 +135,7 @@
 		"stylelint-config-sass-guidelines": "^7.0.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.0",
+		"terser-webpack-plugin": "^3.0.6",
 		"ts-loader": "^7.0.5",
 		"ts-node": "^8.10.2",
 		"tsconfig-paths": "^3.9.0",
