--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
 		"node/no-missing-import": "off",
 		"react/no-children-prop": "off",
 		"implicit-arrow-linebreak": "off",
+		"react/no-unused-prop-types": "off",
 		"node/no-unpublished-import": "off",
 		"react/require-default-props": "off",
 		"lines-between-class-members": "off",
