--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
 	"scripts": {
 		"dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
 		"dev-server": "npx tsc --watch",
-		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch",
-		"dev-client": "npx cross-env NODE_ENV=dev TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --env.isDev",
+		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch --ignore \"src/**/*.ts\"",
+		"dev-client": "npx cross-env NODE_ENV=dev TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server",
 		"dev-nodemon": "npx nodemon -r dotenv/config dist/index.js",
 		"build": "npm run build-server && npm run build-client && npm run build-watch",
 		"build-watch": "npx babel src/server --out-dir dist --copy-files",
@@ -46,26 +46,23 @@
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
 	},
 	"dependencies": {
-		"@apollo/react-hooks": "^3.1.5",
+		"@apollo/client": "^3.0.0-rc.10",
 		"@material-ui/core": "^4.11.0",
 		"@oly_op/bem": "^2.4.0",
 		"@oly_op/music-app-common": "^1.1.0",
 		"@oly_op/pipe": "^2.0.2",
-		"apollo-cache-inmemory": "^1.6.6",
-		"apollo-client": "^2.6.10",
 		"apollo-server-express": "^2.15.1",
 		"apollo-upload-client": "^13.0.0",
-		"aws-sdk": "^2.711.0",
+		"aws-sdk": "^2.712.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"graphql-scalars": "^1.2.1",
-		"graphql-tag": "^2.10.3",
 		"graphql-upload": "^11.0.0",
 		"helmet": "^3.23.3",
-		"lodash": "^4.17.15",
+		"lodash": "^4.17.19",
 		"morgan": "^1.10.0",
 		"music-metadata": "^7.0.0",
 		"node-fetch": "^2.6.0",
@@ -93,7 +90,7 @@
 		"@types/lodash": "^4.14.157",
 		"@types/mini-css-extract-plugin": "^0.9.1",
 		"@types/morgan": "^1.9.1",
-		"@types/node": "^14.0.19",
+		"@types/node": "^14.0.20",
 		"@types/node-fetch": "^2.5.7",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -116,7 +113,7 @@
 		"cross-env": "^7.0.2",
 		"css-loader": "^3.6.0",
 		"dotenv": "^8.2.0",
-		"dotenv-webpack": "^1.8.0",
+		"dotenv-webpack": "^2.0.0",
 		"eslint": "^7.4.0",
 		"eslint-config-airbnb-typescript": "^8.0.2",
 		"eslint-plugin-import": "^2.22.0",
@@ -138,7 +135,7 @@
 		"stylelint-config-sass-guidelines": "^7.0.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.0",
-		"ts-loader": "^7.0.5",
+		"ts-loader": "^8.0.0",
 		"ts-node": "^8.10.2",
 		"tsconfig-paths": "^3.9.0",
 		"typescript": "^3.9.6",
