--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,13 +18,8 @@
 		"@typescript-eslint"
 	],
 	"parserOptions": {
-		"ecmaVersion": 2020,
 		"sourceType": "module",
-		"project": "./tsconfig.eslint.json",
-		"ecmaFeatures": {
-			"jsx": true,
-			"impliedStrict": true
-		}
+		"project": "./tsconfig.eslint.json"
 	},
 	"env": {
 		"node": true,
@@ -64,6 +59,7 @@
 		"jsx-a11y/control-has-associated-label": "off",
 		"node/no-unsupported-features/es-syntax": "off",
 		"jsx-a11y/no-static-element-interactions": "off",
+		"@typescript-eslint/no-floating-promises": "off",
 		"@typescript-eslint/no-non-null-assertion": "off",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"no-mixed-spaces-and-tabs": [
