--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,8 +39,8 @@
 	"terminal.integrated.fontWeight": "600",
 	"editor.renderControlCharacters": false,
 	"terminal.integrated.rendererType": "dom",
-  "extensions.ignoreRecommendations": true,
-	"typescript.tsdk": "./node_modules\\typescript\\lib",
+	"extensions.ignoreRecommendations": true,
+	"typescript.tsdk": "./node_modules/typescript/lib",
 	"javascript.updateImportsOnFileMove.enabled": "never",
 	"editor.fontFamily": "Liberation Mono, Consolas, 'Courier New', monospace",
 	"terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
