--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,21 @@
 	"compilerOptions": {
 		"jsx": "react",
 		"strict": true,
-		"allowJs": true,
 		"outDir": "dist",
-		"target": "ESNext",
 		"sourceMap": true,
-		"module": "CommonJS",
+		"target": "ESNext",
+		"module": "ESNext",
+		"noImplicitAny": true,
 		"removeComments": true,
 		"noUnusedLocals": true,
 		"esModuleInterop": true,
+		"strictNullChecks": true,
 		"moduleResolution": "Node",
 		"noUnusedParameters": true,
+		"strictFunctionTypes": true,
 		"jsxFactory": "createElement",
 		"noFallthroughCasesInSwitch": true,
+		"strictPropertyInitialization": true,
 		"forceConsistentCasingInFileNames": true
 	},
 	"include": [
