--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,11 +11,12 @@
 	"git.confirmSync": false,
   "editor.folding": false,
 	"editor.fontWeight": "600",
-	"workbench.tree.indent": 20,
 	"editor.lineNumbers": "off",
+	"workbench.tree.indent": 20,
+  "editor.glyphMargin": false,
+	"editor.cursorStyle": "line",
 	"editor.insertSpaces": false,
 	"breadcrumbs.enabled": false,
-  "editor.glyphMargin": false,
 	"editor.formatOnPaste": false,
 	"git.enableSmartCommit": true,
 	"editor.fontLigatures": false,
@@ -24,6 +25,9 @@
 	"explorer.confirmDelete": false,
 	"editor.minimap.enabled": false,
   "eslint.alwaysShowStatus": true,
+	"npm.enableRunFromFolder": false,
+	"editor.cursorBlinking": "smooth",
+	"npm.enableScriptExplorer": false,
 	"files.insertFinalNewline": false,
 	"typescript.format.enable": false,
 	"editor.renderWhitespace": "none",
@@ -32,14 +36,21 @@
 	"terminal.integrated.fontSize": 16,
 	"editor.renderIndentGuides": false,
 	"editor.wrappingStrategy": "simple",
+	"workbench.sideBar.location": "left",
 	"scss.colorDecorators.enable": false,
 	"explorer.confirmDragAndDrop": false,
+	"workbench.statusBar.visible": false,
 	"workbench.colorTheme": "GitHub Plus",
+	"workbench.editor.tabSizing": "fit",
 	"workbench.activityBar.visible": false,
 	"terminal.integrated.fontWeight": "600",
 	"editor.renderControlCharacters": false,
+	"workbench.editor.labelFormat": "medium",
+	"workbench.editor.tabCloseButton": "off",
 	"terminal.integrated.rendererType": "dom",
 	"extensions.ignoreRecommendations": true,
+	"terminal.integrated.confirmOnExit": true,
+	"editor.find.autoFindInSelection": "never",
 	"typescript.tsdk": "./node_modules/typescript/lib",
 	"javascript.updateImportsOnFileMove.enabled": "never",
 	"editor.fontFamily": "Liberation Mono, Consolas, 'Courier New', monospace",
@@ -51,7 +62,7 @@
 		"typescriptreact"
 	],
 	"files.exclude": {
-		// ".vscode/": true,
+		".vscode/": true,
 		"node_modules/": true,
 		"dist": true,
 		".env": true
