--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
 	],
 	"scripts": {
 		"dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
-		"dev-server": "npx tsc --watch",
+		"dev-server": "npx tsc  --project tsconfig.server.json --watch",
 		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch --ignore \"src/**/*.ts\"",
 		"dev-client": "npx cross-env NODE_ENV=dev TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server",
 		"dev-nodemon": "npx nodemon -r dotenv/config dist/index.js",
 		"build": "npm run build-server && npm run build-client && npm run build-watch",
 		"build-watch": "npx babel src/server --out-dir dist --copy-files",
-		"build-server": "npx tsc",
+		"build-server": "npx tsc --project tsconfig.server.json",
 		"build-client": "npx cross-env NODE_ENV=pro TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack",
 		"delete-build": "rm -r -f dist",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.0.0-rc.12",
+		"@apollo/client": "^3.0.0",
 		"@material-ui/core": "^4.11.0",
 		"@oly_op/bem": "^2.4.0",
 		"@oly_op/music-app-common": "^1.2.0",
@@ -59,7 +59,7 @@
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
-		"graphql-scalars": "^1.2.1",
+		"graphql-scalars": "^1.2.2",
 		"graphql-upload": "^11.0.0",
 		"helmet": "^3.23.3",
 		"lodash": "^4.17.19",
@@ -74,7 +74,7 @@
 		"uuid": "^8.2.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.10.4",
+		"@babel/cli": "^7.10.5",
 		"@playlyfe/gql": "^2.6.2",
 		"@types/apollo-upload-client": "^8.1.3",
 		"@types/body-parser": "^1.19.0",
@@ -130,12 +130,13 @@
 		"prop-types": "^15.7.2",
 		"sass": "^1.26.10",
 		"sass-loader": "^9.0.2",
+		"source-map-loader": "^1.0.1",
 		"style-loader": "^1.2.1",
 		"stylelint": "^13.6.1",
 		"stylelint-config-sass-guidelines": "^7.0.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.0",
-		"ts-loader": "^8.0.0",
+		"ts-loader": "^8.0.1",
 		"ts-node": "^8.10.2",
 		"tsconfig-paths": "^3.9.0",
 		"typescript": "^3.9.6",
