--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,7 @@
 {
 	"extends": "./tsconfig.json",
-	"include": ["src/**/*.ts", "webpack.config.ts"]
+	"include": [
+		"./src",
+		"webpack.config.ts"
+	]
 }
