--- a/package.json
+++ b/package.json
@@ -35,19 +35,18 @@
 		"dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
 		"dev-server": "npx tsc  --project tsconfig.server.json --watch",
 		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch --ignore \"src/**/*.ts\"",
-		"dev-client": "npx cross-env NODE_ENV=dev TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server",
+		"dev-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server",
 		"dev-nodemon": "npx nodemon -r dotenv/config dist/index.js",
 		"build": "npm run build-server && npm run build-client && npm run build-watch",
 		"build-watch": "npx babel src/server --out-dir dist --copy-files",
 		"build-server": "npx tsc --project tsconfig.server.json",
-		"build-client": "npx cross-env NODE_ENV=pro TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack",
+		"build-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack",
 		"delete-build": "rm -r -f dist",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.0.1",
-		"@material-ui/core": "^4.11.0",
 		"@oly_op/bem": "^2.4.0",
 		"@oly_op/music-app-common": "^1.2.0",
 		"@oly_op/pipe": "^2.0.2",
