--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,12 @@
 	"less.validate": false,
 	"scss.validate": false,
 	"editor.lineHeight": 24,
-	"git.confirmSync": false,
   "editor.folding": false,
-	"editor.fontWeight": "600",
+	"git.confirmSync": false,
 	"editor.lineNumbers": "off",
 	"workbench.tree.indent": 20,
-  "editor.glyphMargin": false,
+	"editor.glyphMargin": false,
+	"editor.fontWeight": "bold",
 	"editor.cursorStyle": "line",
 	"editor.insertSpaces": false,
 	"breadcrumbs.enabled": false,
@@ -37,23 +37,24 @@
 	"editor.renderIndentGuides": false,
 	"editor.wrappingStrategy": "simple",
 	"workbench.sideBar.location": "left",
+	"workbench.editor.tabSizing": "fit",
 	"scss.colorDecorators.enable": false,
 	"explorer.confirmDragAndDrop": false,
 	"workbench.statusBar.visible": false,
 	"workbench.colorTheme": "GitHub Plus",
-	"workbench.editor.tabSizing": "fit",
 	"workbench.activityBar.visible": false,
-	"terminal.integrated.fontWeight": "600",
+	"terminal.integrated.fontWeight": "800",
 	"editor.renderControlCharacters": false,
 	"workbench.editor.labelFormat": "medium",
 	"workbench.editor.tabCloseButton": "off",
-	"terminal.integrated.rendererType": "dom",
 	"extensions.ignoreRecommendations": true,
 	"terminal.integrated.confirmOnExit": true,
+	"terminal.integrated.rendererType": "dom",
 	"editor.find.autoFindInSelection": "never",
+	"editor.fontFamily": "Liberation Mono, monospace",
 	"typescript.tsdk": "./node_modules/typescript/lib",
 	"javascript.updateImportsOnFileMove.enabled": "never",
-	"editor.fontFamily": "Liberation Mono, Consolas, 'Courier New', monospace",
+	"terminal.integrated.fontFamily": "Liberation Mono, monospace",
 	"terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
 	"eslint.validate": [
 		"javascript",
