--- a/package.json
+++ b/package.json
@@ -32,27 +32,31 @@
 		"eslint"
 	],
 	"scripts": {
-		"dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
-		"dev-server": "npx tsc  --project tsconfig.server.json --watch",
-		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch --ignore \"src/**/*.ts\"",
-		"dev-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server",
+		"dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
 		"dev-nodemon": "npx nodemon -r dotenv/config dist/index.js",
-		"build": "npm run build-server && npm run build-client && npm run build-watch",
+		"dev-server": "npx tsc --project tsconfig.server.json --watch",
+		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch --ignore \"src/**/*.ts\"",
+		"dev-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.client.ts",
+		"dev-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.upload.ts",
+		"build": "npm run build-server && npm run build-client && npm run build-upload && npm run build-watch",
 		"build-watch": "npx babel src/server --out-dir dist --copy-files",
 		"build-server": "npx tsc --project tsconfig.server.json",
-		"build-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack",
+		"build-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.client.ts",
+		"build-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.upload.ts",
 		"delete-build": "rm -r -f dist",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.0.2",
+		"@material-ui/core": "^4.11.0",
+		"@material-ui/icons": "^4.9.1",
 		"@oly_op/bem": "^2.4.0",
-		"@oly_op/music-app-common": "^1.2.0",
+		"@oly_op/music-app-common": "^1.4.0",
 		"@oly_op/pipe": "^2.0.2",
 		"apollo-server-express": "^2.16.0",
-		"apollo-upload-client": "^13.0.0",
-		"aws-sdk": "^2.715.0",
+		"apollo-upload-client": "^14.0.1",
+		"aws-sdk": "^2.717.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
@@ -64,7 +68,7 @@
 		"lodash": "^4.17.19",
 		"morgan": "^1.10.0",
 		"music-metadata": "^7.0.0",
-		"node-fetch": "^2.6.0",
+		"music-metadata-browser": "^2.1.0",
 		"pg": "^8.3.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
@@ -89,23 +93,22 @@
 		"@types/lodash": "^4.14.157",
 		"@types/mini-css-extract-plugin": "^0.9.1",
 		"@types/morgan": "^1.9.1",
-		"@types/node": "^14.0.22",
-		"@types/node-fetch": "^2.5.7",
+		"@types/node": "^14.0.24",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.4",
 		"@types/react": "^16.9.43",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-router-dom": "^5.1.5",
-		"@types/sharp": "^0.25.0",
+		"@types/sharp": "^0.25.1",
 		"@types/uuid": "^8.0.0",
 		"@types/webpack": "^4.41.21",
 		"@types/webpack-bundle-analyzer": "^3.8.0",
 		"@types/webpack-dev-server": "^3.11.0",
 		"@types/webpack-env": "^1.15.2",
 		"@types/write-file-webpack-plugin": "^4.5.0",
-		"@typescript-eslint/eslint-plugin": "^3.6.0",
-		"@typescript-eslint/parser": "^3.6.0",
+		"@typescript-eslint/eslint-plugin": "^3.7.0",
+		"@typescript-eslint/parser": "^3.7.0",
 		"compression-webpack-plugin": "^4.0.0",
 		"concurrently": "^5.2.0",
 		"copy-webpack-plugin": "^6.0.3",
@@ -143,6 +146,7 @@
 		"webpack-bundle-analyzer": "^3.8.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
+		"webpack-merge": "^5.0.9",
 		"write-file-webpack-plugin": "^4.5.1"
 	}
 }
