--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,9 +38,9 @@
 	"editor.wrappingStrategy": "simple",
 	"workbench.sideBar.location": "left",
 	"workbench.editor.tabSizing": "fit",
+	"workbench.statusBar.visible": true,
 	"scss.colorDecorators.enable": false,
 	"explorer.confirmDragAndDrop": false,
-	"workbench.statusBar.visible": false,
 	"workbench.colorTheme": "GitHub Plus",
 	"workbench.activityBar.visible": false,
 	"terminal.integrated.fontWeight": "800",
