--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	],
 	"scripts": {
 		"dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
+		"client-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
+		"upload-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
 		"dev-nodemon": "npx nodemon -r dotenv/config dist/index.js",
 		"dev-server": "npx tsc --project tsconfig.server.json --watch",
 		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch --ignore \"src/**/*.ts\"",
@@ -52,11 +54,11 @@
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
 		"@oly_op/bem": "^2.4.0",
-		"@oly_op/music-app-common": "^1.4.0",
-		"@oly_op/pipe": "^2.0.2",
+		"@oly_op/music-app-common": "^1.8.0",
+		"@oly_op/pipe": "^2.1.8",
 		"apollo-server-express": "^2.16.0",
 		"apollo-upload-client": "^14.0.1",
-		"aws-sdk": "^2.717.0",
+		"aws-sdk": "^2.720.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
@@ -93,7 +95,7 @@
 		"@types/lodash": "^4.14.157",
 		"@types/mini-css-extract-plugin": "^0.9.1",
 		"@types/morgan": "^1.9.1",
-		"@types/node": "^14.0.24",
+		"@types/node": "^14.0.26",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.4",
@@ -142,7 +144,7 @@
 		"ts-node": "^8.10.2",
 		"tsconfig-paths": "^3.9.0",
 		"typescript": "^3.9.7",
-		"webpack": "^4.43.0",
+		"webpack": "^4.44.0",
 		"webpack-bundle-analyzer": "^3.8.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
