--- a/src/common/package.json
+++ b/src/common/package.json
@@ -1,7 +1,7 @@
 {
 	"type": "module",
 	"license": "MIT",
-	"version": "1.4.0",
+	"version": "1.8.0",
 	"main": "index.ts",
 	"description": "music-app-common",
 	"name": "@oly_op/music-app-common",
@@ -17,7 +17,7 @@
 		"url": "https://github.com/olyop/music-app.git"
 	},
 	"files": [
-    "types.ts",
-		"index.ts"
+		"index.ts",
+		"types.ts"
 	]
 }
