--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,9 +11,10 @@
   "editor.folding": false,
 	"git.confirmSync": false,
 	"editor.lineNumbers": "off",
-	"workbench.tree.indent": 20,
+	"workbench.tree.indent": 15,
 	"editor.glyphMargin": false,
 	"editor.fontWeight": "bold",
+	"workbench.iconTheme": null,
 	"editor.cursorStyle": "line",
 	"editor.insertSpaces": false,
 	"breadcrumbs.enabled": false,
@@ -25,6 +26,7 @@
 	"explorer.confirmDelete": false,
 	"editor.minimap.enabled": false,
   "eslint.alwaysShowStatus": true,
+	"editor.foldingHighlight": false,
 	"npm.enableRunFromFolder": false,
 	"editor.cursorBlinking": "smooth",
 	"npm.enableScriptExplorer": false,
