--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,7 @@
 		"array-bracket-spacing": "off",
 		"node/no-missing-import": "off",
 		"react/no-children-prop": "off",
+		"promise/catch-or-return": "off",
 		"implicit-arrow-linebreak": "off",
 		"react/no-array-index-key": "off",
 		"react/no-unused-prop-types": "off",
@@ -53,6 +54,7 @@
 		"react/require-default-props": "off",
 		"lines-between-class-members": "off",
 		"import/prefer-default-export": "off",
+		"react/jsx-props-no-spreading": "off",
 		"@typescript-eslint/comma-spacing": "off",
 		"@typescript-eslint/ban-ts-comment": "off",
 		"jsx-a11y/click-events-have-key-events": "off",
