--- a/package.json
+++ b/package.json
@@ -47,20 +47,24 @@
 		"build-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.upload.ts",
 		"delete-build": "rm -r -f dist",
 		"sync": "git checkout . && git remote update && git pull",
-		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
+		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master",
+		"publish-types": "cd src/types && npm publish && cd ../..",
+		"publish-common": "rm -r -f src/common/dist && npx tsc --outDir src/common/dist --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.0.2",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
+		"@material-ui/lab": "^4.0.0-alpha.56",
 		"@material-ui/pickers": "^3.2.10",
 		"@material-ui/styles": "^4.10.0",
 		"@oly_op/bem": "^2.4.0",
-		"@oly_op/music-app-common": "^1.8.0",
+		"@oly_op/music-app-common": "^3.3.0",
 		"@oly_op/pipe": "^2.1.8",
 		"apollo-server-express": "^2.16.0",
 		"apollo-upload-client": "^14.0.1",
+		"autosuggest-highlight": "^3.1.1",
 		"aws-sdk": "^2.720.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
@@ -78,19 +82,21 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
+		"react-select": "^3.1.0",
 		"sharp": "^0.25.4",
 		"uuid": "^8.2.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.10.5",
+		"@oly_op/music-app-types": "^1.2.0",
 		"@playlyfe/gql": "^2.6.2",
 		"@types/apollo-upload-client": "^8.1.3",
+		"@types/autosuggest-highlight": "^3.1.0",
 		"@types/body-parser": "^1.19.0",
 		"@types/compression": "^1.7.0",
 		"@types/compression-webpack-plugin": "^4.0.0",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
-		"@types/copy-webpack-plugin": "^6.0.0",
 		"@types/dotenv-webpack": "^1.8.0",
 		"@types/eslint": "^7.2.0",
 		"@types/express": "^4.17.7",
@@ -105,6 +111,7 @@
 		"@types/react": "^16.9.43",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-router-dom": "^5.1.5",
+		"@types/react-select": "^3.0.14",
 		"@types/sharp": "^0.25.1",
 		"@types/uuid": "^8.0.0",
 		"@types/webpack": "^4.41.21",
@@ -116,7 +123,6 @@
 		"@typescript-eslint/parser": "^3.7.0",
 		"compression-webpack-plugin": "^4.0.0",
 		"concurrently": "^5.2.0",
-		"copy-webpack-plugin": "^6.0.3",
 		"cross-env": "^7.0.2",
 		"css-loader": "^4.0.0",
 		"dotenv": "^8.2.0",
@@ -127,7 +133,7 @@
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.20.3",
+		"eslint-plugin-react": "^7.20.4",
 		"eslint-plugin-react-hooks": "^4.0.7",
 		"graphql": "^15.3.0",
 		"html-webpack-plugin": "^4.3.0",
