--- a/src/types/package.json
+++ b/src/types/package.json
@@ -1,22 +1,20 @@
 {
+	"type": "module",
 	"private": false,
 	"license": "MIT",
-	"version": "3.3.0",
-	"main": "dist",
-	"description": "music-app-common",
-	"name": "@oly_op/music-app-common",
+	"version": "1.2.0",
+	"main": "index.ts",
+	"description": "music-app-types",
+	"name": "@oly_op/music-app-types",
 	"bugs": "https://github.com/olyop/music-app/issues",
 	"homepage": "https://github.com/olyop/music-app/blob/master/README.md",
 	"author": {
 		"name": "Oliver Plummer",
 		"email": "oliver.plummer@outlook.com"
 	},
-	"peerDependencies": {
-		"react": "16.13.x"
-	},
 	"repository": {
     "type": "git",
-    "directory": "src/common",
+    "directory": "src/types",
 		"url": "https://github.com/olyop/music-app.git"
 	}
 }
