--- a/package.json
+++ b/package.json
@@ -52,23 +52,23 @@
 		"publish-common": "rm -r -f src/common/dist && npx tsc --outDir src/common/dist --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.0.2",
+		"@apollo/client": "^3.1.1",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
-		"@material-ui/lab": "^4.0.0-alpha.56",
 		"@material-ui/pickers": "^3.2.10",
 		"@oly_op/bem": "^2.4.0",
 		"@oly_op/music-app-common": "^3.6.0",
 		"@oly_op/pipe": "^3.1.0",
 		"@typescript-eslint/eslint-plugin": "^3.7.1",
 		"apollo-server-express": "^2.16.1",
-		"apollo-upload-client": "^14.0.1",
-		"aws-sdk": "^2.721.0",
+		"apollo-upload-client": "^14.1.1",
+		"aws-sdk": "^2.722.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
+		"downshift": "^6.0.2",
 		"express": "^4.17.1",
 		"graphql-scalars": "^1.2.2",
 		"graphql-upload": "^11.0.0",
@@ -100,7 +100,7 @@
 		"@types/lodash": "^4.14.157",
 		"@types/mini-css-extract-plugin": "^0.9.1",
 		"@types/morgan": "^1.9.1",
-		"@types/node": "^14.0.26",
+		"@types/node": "^14.0.27",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.4",
@@ -127,7 +127,7 @@
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.20.4",
+		"eslint-plugin-react": "^7.20.5",
 		"eslint-plugin-react-hooks": "^4.0.7",
 		"graphql": "^15.3.0",
 		"html-webpack-plugin": "^4.3.0",
