--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master",
 		"publish-types": "cd src/types && npm publish && cd ../..",
-		"publish-common": "rm -r -f src/common/dist && npx tsc --outDir src/common/dist --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
+		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.1.3",
@@ -58,7 +58,7 @@
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/pickers": "^3.2.10",
 		"@oly_op/bem": "^2.4.0",
-		"@oly_op/music-app-common": "^3.6.0",
+		"@oly_op/music-app-common": "^5.0.1",
 		"@oly_op/pipe": "^3.1.0",
 		"apollo-server-express": "^2.16.1",
 		"apollo-upload-client": "^14.1.1",
