--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,7 @@
 	"less.validate": false,
 	"scss.validate": false,
 	"editor.lineHeight": 24,
-  "editor.folding": false,
+	"editor.folding": false,
 	"git.confirmSync": false,
 	"editor.lineNumbers": "off",
 	"workbench.tree.indent": 15,
@@ -41,7 +41,6 @@
 	"editor.foldingHighlight": false,
 	"npm.enableRunFromFolder": false,
 	"editor.cursorBlinking": "smooth",
-	"npm.enableScriptExplorer": false,
 	"files.insertFinalNewline": false,
 	"typescript.format.enable": false,
 	"editor.renderWhitespace": "none",
@@ -60,6 +59,7 @@
 	"terminal.integrated.fontWeight": "800",
 	"editor.renderControlCharacters": false,
 	"workbench.editor.labelFormat": "medium",
+	"typescript.format.semicolons": "remove",
 	"workbench.editor.tabCloseButton": "off",
 	"extensions.ignoreRecommendations": true,
 	"terminal.integrated.confirmOnExit": true,
