--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"client-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
 		"upload-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
 		"server-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-nodemon\"",
-		"dev-nodemon": "npx nodemon -r dotenv/config dist/index.js",
+		"dev-nodemon": "npx kill-port 3000 && npx nodemon -r dotenv/config dist/index.js",
 		"dev-server": "npx tsc --project tsconfig.server.json --watch",
 		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch --ignore \"src/**/*.ts\"",
 		"dev-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.client.ts",
@@ -139,6 +139,7 @@
 		"eslint-plugin-react-hooks": "^4.1.0",
 		"graphql": "^15.3.0",
 		"html-webpack-plugin": "^4.4.1",
+		"kill-port": "^1.6.1",
 		"mini-css-extract-plugin": "^0.11.2",
 		"nodemon": "^2.0.4",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
