--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
 	"typescript.showUnused": false,
 	"explorer.confirmDelete": false,
 	"editor.minimap.enabled": false,
+	"editor.colorDecorators": false,
   "eslint.alwaysShowStatus": true,
 	"editor.foldingHighlight": false,
 	"npm.enableRunFromFolder": false,
@@ -52,6 +53,7 @@
 	"workbench.sideBar.location": "left",
 	"workbench.editor.tabSizing": "fit",
 	"workbench.statusBar.visible": true,
+	"css.colorDecorators.enable": false,
 	"scss.colorDecorators.enable": false,
 	"explorer.confirmDragAndDrop": false,
 	"workbench.colorTheme": "GitHub Plus",
