--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,8 +65,8 @@
 	"workbench.editor.tabCloseButton": "off",
 	"extensions.ignoreRecommendations": true,
 	"terminal.integrated.confirmOnExit": true,
-	"terminal.integrated.rendererType": "dom",
 	"editor.find.autoFindInSelection": "never",
+	"terminal.integrated.rendererType": "canvas",
 	"terminal.integrated.windowsEnableConpty": false,
 	"editor.fontFamily": "Liberation Mono, monospace",
 	"typescript.tsdk": "c:\\code\\music-app\\node_modules\\typescript\\lib",
