--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
 		"jsx": "react",
 		"strict": true,
 		"outDir": "dist",
-		"sourceMap": true,
 		"target": "ES2019",
+		"sourceMap": false,
 		"noImplicitAny": true,
 		"removeComments": true,
 		"esModuleInterop": true,
