--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
 		"client-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
 		"upload-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
 		"server-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-nodemon\"",
-		"dev-nodemon": "npx kill-port 3000 && npx nodemon -r dotenv/config dist/index.js",
+		"dev-nodemon": "npx kill-port 3000 && npx nodemon -r dotenv/config dist",
 		"dev-server": "npx tsc --project tsconfig.server.json --watch",
-		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch --ignore \"src/**/*.ts\"",
+		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch",
 		"dev-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.client.ts",
 		"dev-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.upload.ts",
-		"build": "npm run build-server && npm run build-client && npm run build-upload && npm run build-watch",
+		"build-host": "clear && npm run build && clear && npm run host",
+		"host": "node -r dotenv/config dist",
+		"build": "npm run delete-build && npm run build-server && npm run build-watch && npm run build-client",
 		"build-watch": "npx babel src/server --out-dir dist --copy-files",
 		"build-server": "npx tsc --project tsconfig.server.json",
 		"build-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.client.ts",
@@ -63,10 +65,11 @@
 		"@reduxjs/toolkit": "^1.4.0",
 		"apollo-server-express": "^2.18.1",
 		"apollo-upload-client": "^14.1.2",
-		"aws-sdk": "^2.760.0",
+		"aws-sdk": "^2.761.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
+		"cors": "^2.8.5",
 		"downshift": "^6.0.6",
 		"express": "^4.17.1",
 		"graphql-scalars": "^1.2.7",
@@ -81,7 +84,6 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.1",
-		"react-ripples": "^2.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-waypoint": "^9.0.3",
 		"sharp": "^0.26.1",
@@ -96,6 +98,8 @@
 		"@types/compression-webpack-plugin": "^4.0.1",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
+		"@types/copy-webpack-plugin": "^6.0.0",
+		"@types/cors": "^2.8.7",
 		"@types/dotenv-webpack": "^3.0.0",
 		"@types/eslint": "^7.2.3",
 		"@types/express": "^4.17.8",
@@ -123,13 +127,14 @@
 		"@typescript-eslint/parser": "^4.2.0",
 		"compression-webpack-plugin": "^6.0.2",
 		"concurrently": "^5.3.0",
+		"copy-webpack-plugin": "^6.1.1",
 		"cross-env": "^7.0.2",
 		"css-loader": "^4.3.0",
 		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^3.0.0",
-		"eslint": "^7.9.0",
+		"eslint": "^7.10.0",
 		"eslint-config-airbnb-typescript": "^10.0.0",
-		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
@@ -143,14 +148,12 @@
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
 		"sass": "^1.26.11",
 		"sass-loader": "^10.0.2",
-		"source-map-loader": "^1.1.0",
 		"style-loader": "^1.2.1",
-		"stylelint": "^13.7.1",
+		"stylelint": "^13.7.2",
 		"stylelint-config-sass-guidelines": "^7.1.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.0",
 		"ts-loader": "^8.0.4",
-		"ts-node": "^9.0.0",
 		"typescript": "^4.0.3",
 		"webpack": "^4.44.2",
 		"webpack-bundle-analyzer": "^3.9.0",
