--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -1,6 +1,8 @@
 {
+	"extends": "./tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
+    "sourceMap": false,
 		"target": "ESNEXT",
     "module": "CommonJS",
     "esModuleInterop": true
