--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,9 +40,11 @@
 		"no-unused-vars": "off",
 		"no-else-return": "off",
 		"react/prop-types": "off",
+		"no-await-in-loop": "off",
 		"no-nested-ternary": "off",
 		"node/no-process-env": "off",
 		"object-curly-newline": "off",
+		"no-restricted-syntax": "off",
 		"jsx-a11y/no-autofocus": "off",
 		"no-restricted-globals": "off",
 		"array-bracket-spacing": "off",
