--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.2.1",
+		"@apollo/client": "^3.2.2",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
@@ -63,9 +63,10 @@
 		"@oly_op/music-app-common": "^6.1.0",
 		"@oly_op/pipe": "^3.1.0",
 		"@reduxjs/toolkit": "^1.4.0",
+		"algoliasearch": "^4.5.1",
 		"apollo-server-express": "^2.18.1",
 		"apollo-upload-client": "^14.1.2",
-		"aws-sdk": "^2.761.0",
+		"aws-sdk": "^2.765.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
@@ -112,7 +113,7 @@
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.5",
-		"@types/react": "^16.9.49",
+		"@types/react": "^16.9.50",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-redux": "^7.1.9",
 		"@types/react-router-dom": "^5.1.5",
